<resources>
    <string name="copied">Copied</string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="play"><![CDATA[>]]></string>
    <string name="read_quran">Read Quran</string>
    <string name="listen_quran">Listen Quran</string>
    <string name="surah_name">Surah Name</string>
    <string name="selected">Selected</string>
    <string name="playing">Playing</string>
    <string name="paused">Paused</string>
    <string name="frwd5sec">Forwarded 5 seconds</string>
    <string name="cant_frwd5sec">Cannot forward 5 seconds</string>
    <string name="bkwd5sec">Backwarded 5 seconds</string>
    <string name="cant_bkwd5sec">Cannot backward 5 seconds</string>
    <string name="update_coming_soon">Update Coming Soon!!!</string>
    <string name="slogan">Listen Quran Offline</string>
    <string name="coming_coon">Coming Soon!</string>
    <string name="ayah_reciters">Ayah Reciters</string>
    <string name="reciters">Reciters</string>
    <string name="name">Name</string>
    <string name="eng_name">English Name</string>
    <string name="language">Language</string>
    <string name="internetconnection">This App needs Internet Connection, You are currently not connected to internet</string>
    <string name="errortxt">Something went wrong we are working over it.Please try after some time</string>
    <string name="Timeout">Request Time out. Please try again.</string>
    <string name="networkerror">Network error,Please try after some time</string>
    <string name="please_wait">Please Wait…</string>
    <string name="listen_ayah">Listen Ayah</string>
    <string name="enter_ayah_num">Enter Ayat Number</string>
    <string name="search">Search</string>
    <string name="listen">Listen</string>
    <string name="reciter">Reciter</string>
    <string name="please_enter_ayah_num">Please enter Ayah Number</string>
    <string name="reciting_ayat">Reciting Ayat :</string>
    <string name="close">Close</string>
    <string name="app_info">App Info</string>
    <string name="appp_name">App Name :</string>
    <string name="feature">Features :</string>
    <string name="features">Listen to Quran Offline By As Sudais</string>
    <string name="update">Update :</string>
    <string name="whats_New">What\'s New ?</string>
    <!--<string name="new_feature">Listen to Ayah from List of Reciters!</string>-->
    <string name="new_feature">Please Check New Features</string>
    <string name="version">Version :</string>
    <string name="app_icon">App Icon :</string>
    <string name="dev_info">Developer Info</string>
    <string name="sss">S MD Sulaiman Sait</string>
    <string name="mobile_num">Mobile Number</string>
    <string name="my_num">+917207579969</string>
    <string name="email">Email</string>
    <string name="my_email">saudagar.sulaiman@gmail.com</string>
    <string name="Dua">Dua</string>
    <string name="duas1">“My Lord! Increase me in knowledge.”  [SURAH TA-HA(114)]</string>
    <string name="duas2">“My Lord! I seek refuge with You from the whisperings (suggestions) of the Shayatin (devils).  And I seek refuge with You, My Lord! lest they should come near me.”  [SURAH AL-MU’MINUN(97-98)]</string>
    <string name="duas3">“My Lord! Forgive and have mercy, for You are the Best of those who show mercy!”  [SURAH AL-MU’MINUN(118)]</string>
    <string name="duas4">“Our Lord! Give us in this world that which is good and in the Hereafter that which is good, and save us from the torment of the Fire!”  [SURAH AL-BAQARAH (201)]</string>
    <string name="duas5">“Our Lord! Forgive me and my parents, and (all) the believers on the Day when the reckoning will be established.”  [SURAH IBRAHEEM(41)]</string>
    <string name="duas6">“Our Lord! Keep perfect our Light for us [and do not put it off till we cross over the Sirat (a slippery bridge over the Hell) safely] and grant us forgiveness. Verily, You are Able to do all things.”    [SURAH AT-TAHREEM (8)]</string>
    <string name="duas7">“O my Lord! Grant me from You, a good offspring. You are indeed the All-Hearer of invocation.”   [SURAH AL-IMRAN (38)]</string>
    <string name="duas8">“O my Lord! I seek refuge with You from asking You that of which I have no knowledge. And unless You forgive me and have Mercy on me, I will indeed be one of the losers.” [SURAH HUUD (47)]</string>
    <string name="my_request1">Jazak Allahu Khairan Wa Ahsanal Jaza for using this App. May Allah(SWT) shower his blessings upon us all (Aameen).</string>
    <string name="my_request2">Please feel free to contact me from above details regarding any changes/updates, In Shaa Allah, i will do my best.</string>
    <string name="privacy_policy">Privacy Policy :</string>
    <string name="website">Website :</string>
    <string name="aameen">Allahumma Aameen</string>
    <string name="more">More</string>
    <string name="contact">Contact</string>
    <string name="similar_apps">Similar Apps</string>
    <string name="salaam">ٱلسَّلَامُ عَلَيْكُمْ وَرَحْمَةُ ٱللَّٰهِ وَبَرَكَاتُه</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="last_recited">Last Recited :</string>
    <string name="bookmarked">Bookmarked :</string>
    <string name="bookmark">Bookmark :</string>
    <string name="last_opened_para">Last Opened Para :</string>
    <string name="added_bookmark">Added Bookmark :</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="para_name">Para Name</string>
    <string name="ayat_num">Ayat Number :</string>
    <string name="page_num">Page Number :</string>
    <string name="enter_page_num">Enter Page Number</string>
    <string name="ruku_num">Ruku Number :</string>
    <string name="enter_ruku_num">Enter Ruku Number</string>
    <string name="pls_enter_any_following">Please Enter Any Of The Following</string>
    <string name="pls_enter_any_above">Please Enter Any Of The Above</string>
    <string name="added_bookmark_para">Added Bookmark Para:</string>
    <string name="added_bookmark_ayat">Added Bookmark Ayat:</string>
    <string name="added_bookmark_ruku">Added Bookmark Ruku:</string>
    <string name="added_bookmark_page">Added Bookmark Page:</string>
    <string name="saved_success">Bookmarked Saved Successfully!</string>
    <string name="bookmark_unsaved">Bookmark Unsaved !</string>
    <string name="salaam_sound">Salaam Sound ( On / Off )</string>
    <string name="similar_app_name">App Name :</string>
    <string name="download">Download :</string>
    <string name="install_app">Click To Install</string>
    <string name="pls_try_again">Please Try Again</string>
    <string name="app_name1">Al Qur’an - Offline</string>
    <string name="my_request3">NOTE : \"I request you to call me if it\'s emergency or its  important. Else kindly send message/voice message in email or whatsapp. In Shaa Allah, i will probably respond asap!\"</string>
    <string name="any_more_suggestions">Any More Suggestions ? Please Let Me Know.</string>
    <string name="note">Note :</string>
    <string name="donation_ayat1">Allah says in the Holy Quran Chapter 2 Surah Baqarah, verse 254 :  \"O ye who believe, spend of the wealth We have bestowed upon you (in Allah\'s way), before the Day comes when there shall be no buying and no selling; when neither friendship nor intercession will be of any avail.\"</string>
    <string name="donation_ayat2">Allah says in the Holy Quran Chapter 2 Surah Baqarah verse 274:  \"Those who spend of their goods (in charity) by night and by day in secret and in public shall have their reward with their Lord: on them shall be no fear nor shall they grieve.\"</string>
    <string name="note_donations">I have received many donation appeals from near and dears and could not help in fulfilling their needs all alone, so i have thought to take help from whoever want to help. May Allah Accept All Our Efforts. Allahumm aameen.</string>
    <string name="note_donations1">Note : In Shaa Allah, Every Single Penny Will Be Used In Helping The Needy.</string>
    <string name="sadkha_names">Charity / صدقة‎</string>
    <string name="details">Details‎</string>
    <string name="qibla_direction">Qibla Direction</string>
    <string name="al_quran_reciters">https://drive.google.com/open?id=18_4kFUrjwBIf2KZkeNxu3MUmIJ-KGVES</string>
    <string name="my_donation_website">https://saudagarsulaiman.wixsite.com/helpinghanddonation</string>


    <!--  Changes To Be Done When Refractoring  -->
    <string name="app_name">Al Qur\'an - Offline By "As Sudais"</string>
    <string name="recited_by">Abd ar-Rahman ibn ʻAbd al-Aziz as-Sudais</string>
    <string name="recited_by_name">Reciter : Abd ar-Rahman ibn ʻAbd al-Aziz as-Sudais</string>
    <string name="version_num">1.0.6</string>
    <string name="app_url">https://play.google.com/store/apps/details?id=com.alquran.assudais</string>
    <string name="my_privacy_policy">https://al-quran-as-sudais.flycricket.io/privacy.html</string>
    <string name="my_website">https://al-quran-as-sudais.flycricket.io/</string>

    <!--    Whats New?-->
    <string name="whats_New1">1. User can now make Charitable Donations.</string>
    <string name="whats_New2">2. User can now read Quran in Landscape Mode (Horizontal Mode).</string>
    <string name="whats_New3">3. User can download other apps from "Similar Apps" Section.</string>
    <string name="whats_New4">4. Now App supports Kitkat Versions too!</string>
    <string name="whats_New5">5. Qibla Direction is Available now!</string>
    <string name="whats_New6">6. </string>
    <string name="whats_New7">7. </string>
    <string name="note_donations0">Please Contact Developer. Jazak Allahu Khair</string>
</resources>
