<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:keepScreenOn="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/salaam"
            android:textColor="@color/white"
            android:textSize="@dimen/def_ttl_size"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lnr_listen_quran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            android:background="@drawable/rec_green_white_c10"
            android:orientation="horizontal"
            android:padding="@dimen/def_padding">

            <ImageView
                android:layout_width="@dimen/width35"
                android:layout_height="@dimen/height35"
                android:layout_gravity="center"
                android:src="@drawable/listen" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/listen_quran"
                android:textColor="@color/bg_grad_end_g1"
                android:textSize="@dimen/def_ttl_size"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnr_other_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/def_margin"
            android:background="@drawable/rec_green_white_c10"
            android:orientation="horizontal"
            android:padding="@dimen/def_padding"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/width35"
                android:layout_height="@dimen/height35"
                android:layout_gravity="center"
                android:src="@drawable/similar" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/similar_apps"
                android:textColor="@color/bg_grad_end_g1"
                android:textSize="@dimen/def_ttl_size"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/txt_cs"
        android:layout_marginBottom="@dimen/margin25"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/img_app_info"
            android:layout_width="0dp"
            android:layout_height="@dimen/height35"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/app_info" />

        <ImageView
            android:id="@+id/img_share"
            android:layout_width="0dp"
            android:layout_height="@dimen/height45"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/share" />

        <ImageView
            android:id="@+id/img_dua"
            android:layout_width="0dp"
            android:layout_height="@dimen/height45"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/dua" />

        <ImageView
            android:id="@+id/img_dev_info"
            android:layout_width="0dp"
            android:layout_height="@dimen/height35"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/dev_info" />


    </LinearLayout>

    <TextView
        android:id="@+id/txt_cs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin5"
        android:gravity="center"
        android:text="@string/update_coming_soon"
        android:textColor="@color/white"
        android:textSize="@dimen/def_hint_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin5"
        android:layout_marginEnd="@dimen/def_margin"
        android:layout_marginRight="@dimen/def_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/salaam_sound"
            android:textColor="@color/white"
            android:textSize="@dimen/def_text_size" />

        <CheckBox
            android:id="@+id/cbox_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:buttonTint="@color/white"
            android:checked="true"
            android:gravity="center"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnr_whatsnew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:orientation="vertical"
        android:padding="@dimen/def_padding">

        <ImageView
            android:layout_width="@dimen/width35"
            android:layout_height="@dimen/height35"
            android:layout_gravity="center"
            android:src="@drawable/whatsnew" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin5"
            android:gravity="center"
            android:text="@string/whats_New"
            android:textColor="@color/white"
            android:textSize="@dimen/def_hint_size"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnr_donation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/def_margin"
        android:orientation="vertical"
        android:padding="@dimen/def_padding">

        <ImageView
            android:layout_width="@dimen/width35"
            android:layout_height="@dimen/height35"
            android:layout_gravity="center"
            android:src="@drawable/donation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin5"
            android:gravity="center"
            android:text="@string/donation"
            android:textColor="@color/white"
            android:textSize="@dimen/def_hint_size"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>